pattern-wishcast/tests/ui/pattern_support_no_types.stderr
error: Enum `Value` declares pattern support with `is <P: ...>` but no pattern types are defined. Either: 1) Add pattern type declarations like `type FlexValue = Value is _;`, or 2) Remove the `is <P: ...>` declaration if you don't need pattern-based strictness.
  --> tests/ui/pattern_support_no_types.rs:9:1
   |
9  | / pattern_wishcast! {
10 | |     enum Value is <P: PatternFields> = {
11 | |         HostValue { value: String },
12 | |         TupleValue { elements: Vec<Self> },
...  |
16 | | }
   | |_^
   |
   = note: this error originates in the macro `pattern_wishcast` (in Nightly builds, run with -Z macro-backtrace for more info)
